--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,9 +50,11 @@
           </li>
           <%if user_signed_in?%>
             <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+            <li><%= link_to('Contact', new_contact_path)%></li>
           <% else %>
           <li><%= link_to('Login', new_user_session_path)  %></li></li>
           <li><%= link_to('Register', new_user_registration_path)%></li>
+          <li><%= link_to('Contact', new_contact_path)%></li>
 
         <% end %>
           <li class="divider"></li>
